feat: restore JDK11 compatibility
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>